[package]
name = "input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.6.1"
uinput = "0.1.3"
dotenvy = "0.15.7"
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.0.*"
